--- a/djangomvt/templates/layout.html
+++ b/djangomvt/templates/layout.html
@@ -8,6 +8,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <script src="https://cdn.tiny.cloud/1/vvjvo7kl3d6bh5xriji4khj5vcgeynj3hvajabce6xamq664/tinymce/8/tinymce.min.js" referrerpolicy="origin" crossorigin="anonymous"></script>
+    <link  href="{%static 'css/cropper.min.css' %}" rel="stylesheet">
+    <script src="{%static 'js/cropper.min.js'%}"></script>
   </head>
 
   <script>
