--- a/djangomvt/categories/templates/categories.html
+++ b/djangomvt/categories/templates/categories.html
@@ -4,19 +4,23 @@
    <div>
           <a href="add" class="btn" style="background-color: #212529; color: white;">Додати категорію</a>
    </div>
-    <ul>
+     <div class="mt-3" style="display:flex; flex-direction:row;flex-wrap: wrap; gap: 40px;">
          {% for category in categories %}
-              <li>
-                <h2>{{ category.name }}</h2>
-                {{category.description | safe}} <br/>
-                {% if category.image %}
-                     <img src="{{ category.image.url }}" 
-                        alt="{{ category.name }}"
-                        width="250">
-                {% endif %}
-              </li>
-         {% empty %}
-              <li>Категорії відсутні.</li>
-         {% endfor %}
-    </ul>
+         <div style="width: 400px; height: 500px; text-align: center; display: flex; flex-direction: column; justify-content: space-between;">
+              <h2>{{ category.name }}</h2>
+              {% if category.image %}
+                   <img style="margin: 0 auto;" src="{{ category.image.url }}" 
+                      alt="{{ category.name }}"
+                      width="250">
+              {% endif %}
+              <p style="overflow: hidden;">{{category.description | safe}}</p> <br/>
+               <button class="btn " style="background-color:#212529; width: 100%; color: white;" >Детальніше</button>
+         </div>
+              {% empty %}
+
+            {% endfor %}
+
+     </div>
+
+
     {%endblock%}
