--- a/djangomvt/templates/layout.html
+++ b/djangomvt/templates/layout.html
@@ -99,5 +99,8 @@
     </div>
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    {%block scripts%}
+
+    {%endblock%}
   </body>
 </html>
