--- a/djangomvt/categories/templates/add_category.html
+++ b/djangomvt/categories/templates/add_category.html
@@ -1,4 +1,12 @@
 {% extends 'layout.html' %}
+{%load static%}
+
+{%block mystyles%}
+    <link  href="{%static 'css/cropper.min.css' %}" rel="stylesheet">
+{%endblock%}
+
+
+c
 
 {% block content %}
   <h1>Додати категорію</h1>
@@ -15,8 +23,9 @@
 
       <div class="mb-3">
         <label for="image" class="form-label">Зображення</label>
-        <input type="file" class="form-control" id="image" accept="image/*" name="image" required />
-        <img src="" id="imagePreview" style="display:block; max-width: 100%;" />
+        <input type="file" class="form-control" id="image" accept="image/*" name="imageName" required />
+        <input type="hidden" id="base64image" name="image"/>
+        {% comment %} <img src="" id="imagePreview" style="display:block; max-width: 100%;" /> {% endcomment %}
         <div class="invalid-feedback">Будь ласка, загрузіть картинку для категорії</div>
       </div>
 
@@ -31,44 +40,75 @@
         <div class="invalid-feedback">Опис не може бути порожнім</div>
       </div>
 
+      
       <button type="submit" class="btn btn-primary">Додати</button>
     </form>
   </div>
+  <!-- Modal -->
+<div class="modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal-dialog">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h1 class="modal-title fs-5" id="exampleModalLabel">Редагування фото</h1>
+      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-body">
+      <div>
+        <img src="" id="imagePreview" width="100%"/>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      <button type="button" id="btnCroppedImage" class="btn btn-primary">Зберегти</button>
+    </div>
+  </div>
+</div>
+</div>
 
-  <script>
+
+<script>
+  let isActive = document.getElementById("is_active")
+  isActive.checked = true
+</script>
+
+{% endblock %}
+{% block scripts %}
+<script>
+  window.addEventListener('load', () => {
     var cropper
-    window.addEventListener('load', () => {
-      const input = document.getElementById('image')
-      const imagePreview = document.getElementById('imagePreview')
-      if (input.files.length !== 0) {
-        imagePreview.src = URL.createObjectURL(input.files[0])
-        if (cropper) {
-          cropper.destroy()
-        }
-        cropper = new Cropper(imagePreview, { aspectRatio: 16 / 9 })
+  const exampleModal = new bootstrap.Modal('#exampleModal')
+
+  image.addEventListener('change', (e) => {
+    const files = e.target.files
+    if (files) {
+      const file = files[0]
+      if (file) {
+        imagePreview.src = URL.createObjectURL(file)
+        exampleModal.show()
       }
-      input.addEventListener('change', (e) => {
-        const files = e.target.files
-        if (files) {
-          const file = files[0]
-          if (file) {
-            imagePreview.src = URL.createObjectURL(file)
-            if (cropper) {
-              cropper.destroy()
-            }
-            cropper = new Cropper(imagePreview, { aspectRatio: 16 / 9 })
-          }
-        }
-      })
-    })
-  </script>
+    }
+  })
 
-  <script>
-    let isActive = document.getElementById("is_active")
-    isActive.checked = true
-  </script>
+    document.getElementById("exampleModal").addEventListener('shown.bs.modal',event => {
+      cropper = new Cropper(imagePreview,{autoCropArea:0.5})
+    });
+    
+    
+    document.getElementById("exampleModal").addEventListener('hidden.bs.modal',evemt => {
+      cropper.destroy()
+    });
+    
+    btnCroppedImage.addEventListener("click", () => {
+      var croppedImage = cropper.getCroppedCanvas().toDataURL("image/png");
+      base64image.value = croppedImage
+      exampleModal.hide()
+    });
 
-  {% block scripts %}
+    const imagePreview = document.getElementById('imagePreview')
+
+  });
+</script>
+<script src="{%static 'js/cropper.min.js'%}"></script>
 
     <script>
       ;(function () {
@@ -95,4 +135,3 @@
       })()
     </script>
   {% endblock %}
-{% endblock %}
