--- a/djangomvt/templates/layout.html
+++ b/djangomvt/templates/layout.html
@@ -6,13 +6,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    {%block mystyles%}
+    {%endblock%}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <script src="https://cdn.tiny.cloud/1/vvjvo7kl3d6bh5xriji4khj5vcgeynj3hvajabce6xamq664/tinymce/8/tinymce.min.js" referrerpolicy="origin" crossorigin="anonymous"></script>
-    <link  href="{%static 'css/cropper.min.css' %}" rel="stylesheet">
-    <script src="{%static 'js/cropper.min.js'%}"></script>
   </head>
 
-  <script>
+    <script>
     tinymce.init({
       selector: 'textarea',
       plugins: [
@@ -69,6 +69,8 @@
       uploadcare_public_key: 'eadf712b9c2e6cb05c3d'
     })
   </script>
+
+  </script> 
   <body style="margin-top:3em;">
     <header data-bs-theme="dark">
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -97,6 +99,8 @@
 
       {% endblock %}
     </div>
+
+
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     {%block scripts%}
