--- a/djangomvt/categories/templates/categories.html
+++ b/djangomvt/categories/templates/categories.html
@@ -6,15 +6,20 @@
    </div>
      <div class="mt-3" style="display:flex; flex-direction:row;flex-wrap: wrap; gap: 40px;">
          {% for category in categories %}
-         <div style="width: 400px; height: 500px; text-align: center; display: flex; flex-direction: column; justify-content: space-between;">
+         <div style="width: 400px; height: 600px; text-align: center; display: flex; flex-direction: column; justify-content: space-between;">
               <h2>{{ category.name }}</h2>
-              {% if category.image %}
-                   <img style="margin: 0 auto;" src="{{ category.image.url }}" 
-                      alt="{{ category.name }}"
-                      width="250">
-              {% endif %}
-              <p style="overflow: hidden;">{{category.description | safe}}</p> <br/>
-               <button class="btn " style="background-color:#212529; width: 100%; color: white;" >Детальніше</button>
+              <div style="height: 300px;">
+                   {% if category.image %}
+                        <img src="{{ category.image.url }}" 
+                           alt="{{ category.name }}"
+                           style="width: auto; max-height: 300px;" />
+                   {% endif %}
+              </div>
+              <div style="overflow: scroll; flex: 1;">
+          
+              <p style="overflow:scroll;">{{category.description | safe}}</p> <br/>
+          </div>
+          <button class="btn " style="background-color:#212529; width: 100%; color: white;" >Детальніше</button>
          </div>
               {% empty %}
 
