--- a/djangomvt/categories/templates/categories.html
+++ b/djangomvt/categories/templates/categories.html
@@ -12,7 +12,7 @@
                    {% if category.image %}
                         <img src="{{ category.image.url }}" 
                            alt="{{ category.name }}"
-                           style="width: auto; max-height: 300px;" />
+                           style="max-width: 350px; max-height: 300px;" />
                    {% endif %}
               </div>
               <div style="overflow: scroll; flex: 1;">
