--- a/djangomvt/categories/templates/categories.html
+++ b/djangomvt/categories/templates/categories.html
@@ -6,26 +6,76 @@
    </div>
      <div class="mt-3" style="display:flex; flex-direction:row;flex-wrap: wrap; gap: 40px;">
          {% for category in categories %}
-         <div style="width: 400px; height: 600px; text-align: center; display: flex; flex-direction: column; justify-content: space-between;">
+         <div style="width: 400px; height: 500px; text-align: center; display: flex; flex-direction: column; justify-content: space-between;">
               <h2>{{ category.name }}</h2>
-              <div style="height: 300px;">
+              <div style="height: 300px; margin:0 auto; text-align:center;">
                    {% if category.image %}
                         <img src="{{ category.image.url }}" 
                            alt="{{ category.name }}"
-                           style="max-width: 350px; max-height: 300px;" />
+                           style="max-width: 100%; max-height: 100%;" />
                    {% endif %}
               </div>
               <div style="overflow: scroll; flex: 1;">
-          
-              <p style="overflow:scroll;">{{category.description | safe}}</p> <br/>
+               <p style=";">{{category.description | safe}}</p> <br/>
+               </div>
+          <div style="text-align:right;">
+               <button class="btn " style="background-color:#212529; width: 70%; color: white;" >Детальніше</button>
+               <button>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+                         <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"/>
+                     </svg>
+               </button>
+               <button style="background-color:red;" class="deleteBtn" data-id={{category.id}} data-name={{category.name}}>
+               <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" style="color:white;" class="bi bi-trash" viewBox="0 0 16 16">
+                         <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                         <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                     </svg>
+               </button>
+               </div>
           </div>
-          <button class="btn " style="background-color:#212529; width: 100%; color: white;" >Детальніше</button>
-         </div>
               {% empty %}
 
+              <div class="modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+               <div class="modal-dialog">
+                 <div class="modal-content">
+                   <div class="modal-header">
+                     <h1 class="modal-title fs-5" id="exampleModalLabel">Видалити цю категорію?</h1>
+                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                   </div>
+                   <div class="modal-body">
+                     <div>
+                       <p id="categoryName"></p>
+                     </div>
+                   </div>
+                   <div class="modal-footer">
+                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ні</button>
+                     <button type="button" id="confirmDeleteBtn" class="btn btn-primary">Так</button>
+                   </div>
+                 </div>
+               </div>
+             </div> 
             {% endfor %}
 
      </div>
 
+     
+     
+     {%endblock%}
 
+    {%block scripts%}
+          <script>
+               window.addEventListener("load", () => {
+                    const exampleModal = new bootstrap.Modal('#exampleModal')
+                    const deleteBtn = document.querySelector(".deleteBtn")
+                    deleteBtn.addEventListener("click", () => {
+                         exampleModal.show()
+                    })
+                    document.getElementById("exampleModal").addEventListener('show.bs.modal', function (event) {
+                         const categoryName = deleteBtn.name
+                         const categoryId = deleteBtn.id
+                         const modalText = document.getElementById("exampleModal").querySelector("#categoryName")
+                         modalText.value = "Назва категорії: " + categoryName 
+                    })
+               })
+          </script>
     {%endblock%}
