--- a/djangomvt/categories/templates/edit_category.html
+++ b/djangomvt/categories/templates/edit_category.html
@@ -5,38 +5,39 @@
   <link href="{% static 'css/cropper.min.css' %}" rel="stylesheet" />
 {% endblock %}
 {% block content %}
-  <h1 style="text-align:center;">Додати категорію</h1>
+  <h1 style="text-align:center;">Редагувати категорію</h1>
   <div class="row">
     <form class="col-md-6 offset-md-3 needs-validation" method="post" enctype="multipart/form-data" novalidate>
       {% csrf_token %}
 
+      <input type="hidden" name="id" value="{{ category.id }}" />
+
       <div class="mb-3">
         <label for="name" class="form-label">Назва</label>
-        <input type="text" class="form-control" id="name" name="name" required />
+        <input type="text" class="form-control" id="name" name="name" value="{{ category.name }}" required />
         <div class="valid-feedback">Looks good!</div>
         <div class="invalid-feedback">Будь ласка, введіть назву категорії</div>
       </div>
 
-      <input type="file" class="form-control" id="image" accept="image/*" required name="image" />
+      <input type="file" class="form-control" id="image" accept="image/*" value="/{{ category.image }}" name="image" />
+      <small>Поточне зображення: {{ category.image }}</small>
       <div class="mb-3 mt-3" style="text-align:center;">
-        <label for="image" class="form-label"><img id="imgView" src="/images/noimage.jpg" width="300" /></label>
+        <label for="image" class="form-label"><img id="imgView" src="/{{ category.image }}" width="300" /></label>
         {% comment %} <img src="" id="imagePreview" style="display:block; max-width: 100%;" /> {% endcomment %}
-        <div class="invalid-feedback">Будь ласка, загрузіть картинку для категорії</div>
       </div>
 
       <div class="form-check mb-3">
-        <input type="checkbox" value="checked" class="form-check-input" id="is_active" name="is_active" />
+        <input type="checkbox" checked="{{category.is_active}}" class="form-check-input" id="is_active" name="is_active" />
         <label for="is_active" class="form-label">Чи активна</label>
       </div>
 
       <div>
         <label for="description" class="form-label">Опис</label>
-        <textarea name="description" id="description"></textarea>
+        <textarea name="description" id="description" placeholder="{{ category.description }}"></textarea>
       </div>
 
       <div class="mt-3 mb-3">
-        <button type="submit" id="confirmBtn" class="btn btn-primary">Додати</button>
-
+          <button type="submit" id="confirmBtn" class="btn btn-primary">Зберегти</button>
       </div>
     </form>
   </div>
@@ -61,13 +62,9 @@
     </div>
   </div>
 {% endblock %}
+
 {% block scripts %}
   <script src="https://cdn.tiny.cloud/1/vvjvo7kl3d6bh5xriji4khj5vcgeynj3hvajabce6xamq664/tinymce/8/tinymce.min.js" referrerpolicy="origin" crossorigin="anonymous"></script>
-  <script>
-    let isActive = document.getElementById('is_active')
-    isActive.checked = true
-  </script>
-
   <script>
     tinymce.init({
       selector: 'textarea',
