--- a/djangomvt/templates/layout.html
+++ b/djangomvt/templates/layout.html
@@ -36,6 +36,9 @@
                 <a class="btn" width="100px" style="background-color:black;" href="/users/register">Реєстрація</a>
               </div>
             {%else%}
+            <div class="d-flex" style="margin-right:20px;">
+              <a href="/users/profile/" class="btn" style="background-color:black;">Профіль</a>
+            </div>
               <div class="d-flex" style="margin-right:20px">
                 <a class='btn' style="background-color:black;" href="/users/logout">Вихід</a>
               </div>
