--- a/djangomvt/users/templates/login.html
+++ b/djangomvt/users/templates/login.html
@@ -11,10 +11,13 @@
     
     {% if form.errors %}
     <div class="alert alert-danger">
-        {% for field in form %}
+        {% comment %} {% for field in form %}
             {% for error in field.errors %}
                 <p>{{ field.label }}: {{ error }}</p>
             {% endfor %}
+        {% endfor %} {% endcomment %}
+        {% for err in form.non_field_errors %}
+            <p class="form-error">{{ err }}</p>
         {% endfor %}
     </div>
     {% endif %}
