--- a/djangomvt/users/templates/register.html
+++ b/djangomvt/users/templates/register.html
@@ -85,8 +85,11 @@
     </div>
 
 
-    <div class="d-flex flex-row">
-        <button type="submit" class="btn" style="background-color:black; color:white;">Регістрація</button>
+    <div class="d-flex flex-row" style="width: 100%;" >
+        <button type="submit" class="btn btn-success" style="color:white; width: 70%; margin: 0 auto;">Реєстрація</button>
+    </div>
+    <div style="margin: 0 auto; text-align: center;">
+        <a class="btn" style="color:gray;" href="/users/login">Вже маєте аккаунт? Увійти зараз </a>
     </div>
 </form>
 </div>
