--- a/djangomvt/templates/layout.html
+++ b/djangomvt/templates/layout.html
@@ -29,15 +29,15 @@
               </li>
             </ul>
             {%if not user.is_authenticated%}
-              <div class="d-flex" style="margin-right:20px;" >
-                <a class="btn" style="background-color:black;" href="/users/login">Вхід</a>
+              <div class="d-flex" style="margin-right:20px; width: 200px;" >
+                <a class="btn btn-success" style="width: 100%;" href="/users/login">Вхід</a>
               </div>
-              <div class="d-flex" style="margin-right:20px;">
-                <a class="btn" width="100px" style="background-color:black;" href="/users/register">Реєстрація</a>
+              <div class="d-flex" style="margin-right:20px; width: 200px;">
+                <a class="btn btn-success" style=" width: 100%;" href="/users/register">Реєстрація</a>
               </div>
             {%else%}
-              <div class="d-flex" style="margin-right:20px">
-                <a class='btn' style="background-color:black;" href="/users/logout">Вихід</a>
+              <div class="d-flex" style="margin-right:20px; width: 200px;" >
+                <a class='btn btn-success' style="width: 100%;" href="/users/logout">Вихід</a>
               </div>
             {%endif%}
           </div>
