--- a/djangomvt/users/templates/login.html
+++ b/djangomvt/users/templates/login.html
@@ -1,47 +1,48 @@
-{% extends "layout.html" %}
+{% extends 'layout.html' %}
 
 {% block content %}
+  <h1 class="text-center">Вхід</h1>
 
-<h1 class="text-center">Вхід</h1>
-
-<div class = "row">
-<div class = "col-md-6 offset-md-3">
-<form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    
-    {% if form.errors %}
-    <div class="alert alert-danger">
-        {% for field in form %}
-            {% for error in field.errors %}
-                <p>{{ field.label }}: {{ error }}</p>
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <form method="POST">
+        {% csrf_token %}
+        {% if form.non_field_errors %}
+          <div class="alert alert-danger">
+            {% for error in form.non_field_errors %}
+              <p>{{ error }}</p>
             {% endfor %}
-        {% endfor %}
-    </div>
-    {% endif %}
+          </div>
+        {% endif %}
 
-    <div class="mb-3">
-        <label for="username" class="form-label">{{form.username.label}}</label>
-        {{ form.username }}
-        {% if form.username.errors %}
+        <div class="mb-3">
+          <label for="username" class="form-label">{{ form.username.label }}</label>
+          {{ form.username }}
+          {% if form.username.errors %}
             <div class="text-danger">{{ form.username.errors }}</div>
-        {% endif %}
-    </div>
-                
+          {% endif %}
+        </div>
 
-    <div class="mb-3">
-        <label for="password" class="form-label">{{form.password.label}}</label>
-        {{ form.password }}
-        {% if form.password.errors %}
-            <div class="text-danger">{{ form.password.errors }}</div>
-        {% endif %}
-    </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">{{ form.password.label }}</label>
+          {{ form.password }}
+          {% if form.password.errors %}
+          <div class="text-danger">{{ form.password.errors }}</div>
+          {% endif %}
+          <div style="margin: 0 auto; text-align: ;">
+            <a class="btn" style="color:gray;" href="/password-reset">Забули свій пароль?</a>
+          </div>
+        </div>
+        
+        <div class="d-flex flex-row" style="width: 100%; margin: 0 auto; text-align: center; justify-content: center;">
+          <button type="submit" class="btn btn-success" style="color:white; width: 70%;">Увійти</button>
+        </div>
 
-    <div class="d-flex flex-row">
-        <button type="submit" class="btn" style="background-color:black; color:white;">Увійти</button>
-    </div>
-</form>
-</div>
-</div>
+        <div style="margin: 0 auto; text-align: center;">
+          <a class="btn" style="color:gray;" href="/users/register">Ще не маєте аккаунта? Зареєстратуватися зараз</a>
+        </div>
 
+      </form>
+    </div>
+  </div>
 {% endblock %}
-
